--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div>
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
                         <div class="container-fluid">
-                          <a class="navbar-brand" href="#">BUBITAS</a>
+                          <a class="navbar-brand" href="index.html">BUBITAS</a>
                           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                           </button>
@@ -49,6 +49,7 @@
                                   <li><a class="dropdown-item" href="pages/amigurumis.html">AMIGURUMIS</a></li>
                                   <li><a class="dropdown-item" href="pages/camisas.html">CAMISAS</a></li>
                                   <li><a class="dropdown-item" href="pages/pantalones.html">PANTALONES</a></li>
+                                  <li><a class="dropdown-item" href="pages/tienda.html">VER TODO</a></li>
                                 </ul>
                               </li>
                             </ul>
