--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--estilo-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/custom.css">
     <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,400;0,800;1,400&display=swap" rel="stylesheet">
 <!--fav icon-->
     <link rel="shortcurt icon" href="../images/bubitasLogo.png">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
     <title>Conocenos</title>
 </head>
@@ -24,7 +22,7 @@
         <div>
             <div class="marca"><h1>BUBITAS</h1></div>
             <div>
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <nav class="navbar navbar-expand-lg navbar-light ">
                     <div class="container-fluid">
                       <a class="navbar-brand" href="../index.html">BUBITAS</a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,21 +62,21 @@
     <!--main-->
     <main>
         <div>
-            <div><h1 class="h1qs">CONOCENOS</h1></div>
-            <div class="row">
-                <div class="col col-lg-6">
+            <div><h1 class="h1qs bg-primary p-2 text-dark bg-opacity-50">CONOCENOS</h1></div>
+            <div class="row justify-content-center">
+                <div class="col col-lg-4 ms-3">
                     <h3>Sobre Nosotros</h3>
                     <p class="pqs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis at aspernatur quis delectus neque, aliquid quas omnis, laboriosam optio inventore non quasi quos culpa esse ab unde. Sapiente, nam eius.</p>
                 </div>
-                <div class="col col-lg-6">
+                <div class="col col-lg-4">
                     <img src="../images/perchero.jpeg" alt="" class="imgqs img-fluid w-50 p-3">
                 </div>
             </div>
-            <div class="row">
-                <div class="col col-lg-6">
+            <div class="row justify-content-center">
+                <div class="col col-lg-4">
                     <img src="../images/tejidos.jpeg" alt="" class="imgqs img-fluid w-50 p-3">
                 </div>
-                <div class="col col-lg-6">
+                <div class="col col-lg-4">
                     <h3>Nuestra historia</h3>
                     <p class="pqs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor id laborum totam ea atque, eaque ex laboriosam, cum autem ipsa minus quisquam maiores qui harum similique perferendis incidunt architecto sunt.</p>
                 </div>
@@ -121,6 +119,6 @@
     </footer>
 
     <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="../js/bootstrap.js" ></script>
 </body>
 </html>
