--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -5,13 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--estilo-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/custom.css">
     <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,400;0,800;1,400&display=swap" rel="stylesheet">
 <!--fav icon-->
     <link rel="shortcurt icon" href="../images/bubitasLogo.png">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    
+   
     <title>Tienda</title>
 </head>
 <body>
@@ -24,7 +22,7 @@
             <div>
                 <div class="marca"><h1>BUBITAS</h1></div>
                 <div>
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <nav class="navbar navbar-expand-lg navbar-light">
                         <div class="container-fluid">
                           <a class="navbar-brand" href="../index.html">BUBITAS</a>
                           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,10 +63,10 @@
     <main>
         <div class="flexcat">
             <div>
-                <h1 class="h1qs">Categorías</h1>
+                <h1 class="h1qs bg-primary p-2 text-dark bg-opacity-50">Categorías</h1>
             </div>
-            <div class="row justify-content-evenly">
-                <div class="col col-md-6 col-lg-4">
+            <div class="row justify-content-center">
+                <div class="col col-md-4 col-lg-3">
                     <div class="card text-center border border-5 border-rounded m-3" style="width: 18rem;">
                         <img src="../images/Stickers Funky hecho a mano negocio emprendimiento rosa y violeta.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -78,7 +76,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col col-md-6 col-lg-4">
+                <div class="col col-md-4 col-lg-3">
                     <div class="card text-center border border-5 border-rounded m-3" style="width: 18rem;">
                         <img src="../images/Stickers Funky hecho a mano negocio emprendimiento rosa y violeta.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -88,7 +86,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col col-md-6 col-lg-4">
+                <div class="col col-md-4 col-lg-3">
                     <div class="card text-center border border-5 border-rounded m-3" style="width: 18rem;">
                         <img src="../images/Stickers Funky hecho a mano negocio emprendimiento rosa y violeta.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -103,36 +101,42 @@
         </div>
 
         <div>
-            <h1 class="h1qs">Todos los productos</h1>
+            <h1 class="h1qs bg-primary p-2 text-dark bg-opacity-50 m-3">Todos los productos</h1>
             <div class="flexcat">
-                <div class="row">
-                    <div class="col col-md-6 col-lg-4 align-item-center">
+                <div class="row justify-content-center m-3">
+                    <div class="col col-md-4 col-lg-3">
                         <div class="card text-center" style="width: 18rem;">
                             <img src="../images/Stickers Funky hecho a mano negocio emprendimiento rosa y violeta.png" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Nombre del producto</h5>
                               <p class="card-text">Precio $</p>
-                              <a href="#" class="btn btn-secondary">Comprar</a>
+                              <a href="#" class="btn btn-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                              </svg> Comprar</a>
                             </div>
                           </div>
                     </div>
-                    <div class="col col-md-6 col-lg-4">
+                    <div class="col col-md-4 col-lg-3">
                         <div class="card text-center" style="width: 18rem;">
                             <img src="../images/Stickers Funky hecho a mano negocio emprendimiento rosa y violeta.png" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Nombre del producto</h5>
                               <p class="card-text">Precio $</p>
-                              <a href="#" class="btn btn-secondary">Comprar</a>
+                              <a href="#" class="btn btn-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                              </svg> Comprar</a>
                             </div>
                           </div>
                     </div>
-                    <div class="col col-md-6 col-lg-4">
+                    <div class="col col-md-4 col-lg-3">
                         <div class="card text-center" style="width: 18rem;">
                             <img src="../images/Stickers Funky hecho a mano negocio emprendimiento rosa y violeta.png" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Nombre del producto</h5>
                               <p class="card-text">Precio $</p>
-                              <a href="#" class="btn btn-secondary">Comprar</a>
+                              <a href="#" class="btn btn-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                              </svg> Comprar</a>
                             </div>
                           </div>
                     </div>
@@ -176,6 +180,6 @@
     </footer>
 
     <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="../js/bootstrap.js"></script>
 </body>
 </html>
