nesting, responsive, 4ta entrega proy final

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </header>
  <!--main-->
-    <main>
+    <main class="mainindex">
         <div class="card bg-white text-black">
             <img src="images/banner.webp" class="card-img" alt="nuestro propósito">
             <div class="card-img-overlay box col-lg-6">
@@ -78,7 +78,7 @@
 
     </main>
 <!--footer-->
-    <footer class="onda">
+    <footer>
         <div class="flex-column d-flex justify-content-center align-items-center">
             <div class="container-footer col-lg-6">
                 <div class="N-P">
