--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -64,19 +64,19 @@
         <div>
             <div><h1 class="h1qs bg-primary p-2 text-dark bg-opacity-50">CONOCENOS</h1></div>
             <div class="row justify-content-center">
-                <div class="col col-lg-4 ms-3">
+                <div class="col col-lg-5 ms-3 ">
                     <h3>Sobre Nosotros</h3>
                     <p class="pqs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis at aspernatur quis delectus neque, aliquid quas omnis, laboriosam optio inventore non quasi quos culpa esse ab unde. Sapiente, nam eius.</p>
                 </div>
-                <div class="col col-lg-4">
-                    <img src="../images/perchero.jpeg" alt="" class="imgqs img-fluid w-50 p-3">
+                <div class="col col-lg-6">
+                    <img src="../images/perchero.jpeg" alt="" class="imgqs img-fluid p-3">
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col col-lg-4">
-                    <img src="../images/tejidos.jpeg" alt="" class="imgqs img-fluid w-50 p-3">
+                <div class="col col-lg-6">
+                    <img src="../images/tejidos.jpeg" alt="" class="imgqs img-fluid p-3">
                 </div>
-                <div class="col col-lg-4">
+                <div class="col col-lg-6">
                     <h3>Nuestra historia</h3>
                     <p class="pqs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor id laborum totam ea atque, eaque ex laboriosam, cum autem ipsa minus quisquam maiores qui harum similique perferendis incidunt architecto sunt.</p>
                 </div>
@@ -109,7 +109,7 @@
             </div>
             <div class="redes_flex">
                 <a href="https://instagram.com/bubitas.indumentaria.infantil" ><img src="../images/instagram-logo.png" alt="" class="logo"></a>
-                <a href="https://wa.me/543815451673" ><img src="../images/whatsapp.png" alt="" class="logo"></a>
+                <a href="https://wa.me/543815800956" ><img src="../images/whatsapp.png" alt="" class="logo"></a>
             </div>
             <div class="copy">
                 &copy; 2022 por lzr
