--- a/pages/amigurumis.html
+++ b/pages/amigurumis.html
@@ -61,38 +61,38 @@
      <main>
         <div>
             <h1 class="h1qs bg-primary p-2 text-dark bg-opacity-50">Todo en amigurumis</h1>
-            <div class="flexcat">
-                <div class="row justify-content-center m-3">
-                    <div class="col col-md-4 col-lg-3">
+            <div class="container">
+                <div class="row justify-content-center ">
+                    <div class="col col-md-6 col-lg-3 m-5">
                         <div class="card text-center" style="width: 18rem;">
-                            <img src="../images/Stickers Funky hecho a mano negocio emprendimiento rosa y violeta.png" class="card-img-top" alt="...">
+                            <img src="../images/lilo.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">Nombre del producto</h5>
-                              <p class="card-text">Precio $</p>
+                              <h5 class="card-title">Lilo 30cm</h5>
+                              <p class="card-text">$2800</p>
                               <a href="#" class="btn btn-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                               </svg> Comprar</a>
                             </div>
                           </div>
                     </div>
-                    <div class="col col-md-4 col-lg-3">
+                    <div class="col col-md-6 col-lg-3 m-5">
                         <div class="card text-center" style="width: 18rem;">
-                            <img src="../images/Stickers Funky hecho a mano negocio emprendimiento rosa y violeta.png" class="card-img-top" alt="...">
+                            <img src="../images/cerdito.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">Nombre del producto</h5>
-                              <p class="card-text">Precio $</p>
+                              <h5 class="card-title">Cerdito 30cm</h5>
+                              <p class="card-text">$2800</p>
                               <a href="#" class="btn btn-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                               </svg> Comprar</a>
                             </div>
                           </div>
                     </div>
-                    <div class="col col-md-4 col-lg-3">
+                    <div class="col col-md-6 col-lg-3 m-5">
                         <div class="card text-center" style="width: 18rem;">
-                            <img src="../images/Stickers Funky hecho a mano negocio emprendimiento rosa y violeta.png" class="card-img-top" alt="...">
+                            <img src="../images/stich (1).jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">Nombre del producto</h5>
-                              <p class="card-text">Precio $</p>
+                              <h5 class="card-title">Stich 25cm</h5>
+                              <p class="card-text">$2000</p>
                               <a href="#" class="btn btn-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                               </svg> Comprar</a>
@@ -102,37 +102,37 @@
                     
         
                 </div>
-                <div class="row justify-content-center m-3">
-                    <div class="col col-md-4 col-lg-3">
+                <div class="row justify-content-center">
+                    <div class="col col-md-6 col-lg-3 m-5">
                         <div class="card text-center" style="width: 18rem;">
-                            <img src="../images/Stickers Funky hecho a mano negocio emprendimiento rosa y violeta.png" class="card-img-top" alt="...">
+                            <img src="../images/frida.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">Nombre del producto</h5>
-                              <p class="card-text">Precio $</p>
+                              <h5 class="card-title">Llavero Frida</h5>
+                              <p class="card-text">$700</p>
                               <a href="#" class="btn btn-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                               </svg> Comprar</a>
                             </div>
                           </div>
                     </div>
-                    <div class="col col-md-4 col-lg-3">
+                    <div class="col col-md-6 col-lg-3 m-5">
                         <div class="card text-center" style="width: 18rem;">
-                            <img src="../images/Stickers Funky hecho a mano negocio emprendimiento rosa y violeta.png" class="card-img-top" alt="...">
+                            <img src="../images/sirena (1).jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">Nombre del producto</h5>
-                              <p class="card-text">Precio $</p>
+                              <h5 class="card-title">Llavero Sirena 10cm</h5>
+                              <p class="card-text">$600</p>
                               <a href="#" class="btn btn-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                               </svg> Comprar</a>
                             </div>
                           </div>
                     </div>
-                    <div class="col col-md-4 col-lg-3">
+                    <div class="col col-md-6 col-lg-3 m-5">
                         <div class="card text-center" style="width: 18rem;">
-                            <img src="../images/Stickers Funky hecho a mano negocio emprendimiento rosa y violeta.png" class="card-img-top" alt="...">
+                            <img src="../images/triceraptor.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">Nombre del producto</h5>
-                              <p class="card-text">Precio $</p>
+                              <h5 class="card-title">Dinosaurio triceratops 15cm</h5>
+                              <p class="card-text">$800</p>
                               <a href="#" class="btn btn-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                               </svg> Comprar</a>
@@ -147,18 +147,18 @@
         </div>
     </main>    
     <!--footer-->
-    <footer class="onda">
+    <footer>
         <div class="flex-column d-flex justify-content-center align-items-center">
             <div class="container-footer col-lg-6">
                 <div class="N-P">
                     <h3>NEWSLETTER</h3>
                 </div>
-                <div class="input-group">
+                <div class="input-group ml-5">
                     <span class="input-group-text">Nombre y Apellido</span>
                     <input type="text" aria-label="Nombre" class="form-control">
                     <input type="text" aria-label="Apellido" class="form-control">
                 </div>
-                <div class="input-group flex-nowrap">
+                <div class="input-group flex-nowrap ml-5">
                     <span class="input-group-text" id="addon-wrapping">Correo Electrónico</span>
                     <input type="email" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
                 </div>
@@ -169,7 +169,7 @@
             </div>
             <div class="redes_flex">
                 <a href="https://instagram.com/bubitas.indumentaria.infantil" ><img src="../images/instagram-logo.png" alt="" class="logo"></a>
-                <a href="https://wa.me/543815451673" ><img src="../images/whatsapp.png" alt="" class="logo"></a>
+                <a href="https://wa.me/543815800956" ><img src="../images/whatsapp.png" alt="" class="logo"></a>
             </div>
             <div class="copy">
                 &copy; 2022 por lzr
