--- a/pages/amigurumis.html
+++ b/pages/amigurumis.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--KEYWORDS-->
+    <meta name="keywords" content="JUGUETE, APEGO, ALGODON, HIPOALERGÉNICO, TEJIDO">
+    <!--description-->
+    <meta name="description" content="Amigurumis realizados a mano con algodón de calidad">
     <!--estilo-->
     <link rel="stylesheet" href="../css/custom.css">
     <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,400;0,800;1,400&display=swap" rel="stylesheet">
