--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="card-img-overlay box col-lg-6">
                 <span class="card-title">Nuestro propósito</span>
                 <h2 class="card-text">Potenciar la libre expresión</h2>
-                <p class="card-text bg-primary p-2 text-dark bg-opacity-10">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam ex ut eum commodi aperiam error sunt id dolorum animi iusto. Fugiat commodi, iusto voluptatibus porro unde veniam laudantium corporis quam.</p>
+                <p class="card-text bg-primary p-2 text-dark bg-opacity-50">Creemos y confiamos en la crianza respetuosa, queremos niños felices y libres de estereotipos. Por eso nuestros productos no tienen género, todos y cada uno de ellos fueron pensados y creados con amor para la comodidad y bienestar de niños y niñas.</p>
                     <div class="botones">
                       <a href="pages/quienessomos.html" class="btn1">Conocenos</a>
                       <a href="pages/tienda.html" class="btn2">Tienda</a>
@@ -105,8 +105,8 @@
                 <a href="pages/quienessomos.html" class="qsfooter" >¿Quienes somos?</a>
             </div>
             <div class="redes_flex">
-                <a href="https://instagram.com/bubitas.indumentaria.infantil" ><img src="images/instagram-logo.png" alt="" class="logo"></a>
-                <a href="https://wa.me/543815451673" ><img src="images/whatsapp.png" alt="" class="logo"></a>
+                <a href="https://instagram.com/bubitas.indumentaria.infantil" target="_blank" ><img src="images/instagram-logo.png" alt="" class="logo"></a>
+                <a href="https://wa.me/543815451673" target="_blank"><img src="images/whatsapp.png" alt="" class="logo"></a>
             </div>
             <div class="copy">
                 &copy; 2022 por lzr
