--- a/pages/pantalones.html
+++ b/pages/pantalones.html
@@ -173,8 +173,8 @@
                 <a href="quienessomos.html" class="qsfooter" >¿Quienes somos?</a>
             </div>
             <div class="redes_flex">
-                <a href="https://instagram.com/bubitas.indumentaria.infantil" ><img src="../images/instagram-logo.png" alt="" class="logo"></a>
-                <a href="https://wa.me/543815800956" ><img src="../images/whatsapp.png" alt="" class="logo"></a>
+                <a href="https://instagram.com/bubitas.indumentaria.infantil" target="_blank" ><img src="../images/instagram-logo.png" alt="" class="logo"></a>
+                <a href="https://wa.me/543815800956" target="_blank" ><img src="../images/whatsapp.png" alt="" class="logo"></a>
             </div>
             <div class="copy">
                 &copy; 2022 por lzr
