--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -65,24 +65,24 @@
 
     <!--main-->
     <main>
-        <div>
+        <div class="container-fluid m-0 p-0">
             <div><h1 class="h1qs bg-primary p-2 text-dark bg-opacity-50">CONOCENOS</h1></div>
-            <div class="row justify-content-center">
-                <div class="col col-lg-5 ms-3 ">
+            <div class="row justify-content-around m-3">
+                <div class="col-md-4">
                     <h3>Sobre Nosotros</h3>
-                    <p class="pqs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis at aspernatur quis delectus neque, aliquid quas omnis, laboriosam optio inventore non quasi quos culpa esse ab unde. Sapiente, nam eius.</p>
+                    <p class="pqs">Somos un emprendimiento basado en la crianza respetuosa y la libertad de las infancias. Creemos que los niños y las niñas no deben cargar con el peso de estereotipos de género, sino que, deben poder expresarse libremente sin prejuicios. Promovemos infancias felices.</p>
                 </div>
-                <div class="col col-lg-6">
-                    <img src="../images/perchero.jpeg" alt="" class="imgqs img-fluid p-3">
+                <div class="col-md-4">
+                    <img src="../images/perchero.jpeg" alt="" class="imgqs img-fluid">
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col col-lg-6">
-                    <img src="../images/tejidos.jpeg" alt="" class="imgqs img-fluid p-3">
+            <div class="row justify-content-around m-3">
+                <div class="col-md-4">
+                    <img src="../images/tejidos.jpeg" alt="" class="imgqs img-fluid">
                 </div>
-                <div class="col col-lg-6">
+                <div class="col-md-4">
                     <h3>Nuestra historia</h3>
-                    <p class="pqs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor id laborum totam ea atque, eaque ex laboriosam, cum autem ipsa minus quisquam maiores qui harum similique perferendis incidunt architecto sunt.</p>
+                    <p class="pqs">Nuestro emprendimiento nace de la curiosidad y la herencia familiar, comienza en la pasión por el tejido y el compromiso por promover infancias felices. Después de muchos éxitos y fracasos en el mundo del crochet, nacen nuestros famosos "amigurumis". Muñecos de apego realizados en algodón puro para cuidar la piel de los niños. Tiempo despúes y con la capacitación correspondiente nos adentramos en el mundo de la costura, para traer prendas que no se encuentran en el mercado; las cuales priorizan la comodidad y expresión de los niños.</p>
                 </div>
                 
             </div>
@@ -112,8 +112,8 @@
                 <a href="quienessomos.html" class="qsfooter" >¿Quienes somos?</a>
             </div>
             <div class="redes_flex">
-                <a href="https://instagram.com/bubitas.indumentaria.infantil" ><img src="../images/instagram-logo.png" alt="" class="logo"></a>
-                <a href="https://wa.me/543815800956" ><img src="../images/whatsapp.png" alt="" class="logo"></a>
+                <a href="https://instagram.com/bubitas.indumentaria.infantil" target="_blank" ><img src="../images/instagram-logo.png" alt="" class="logo"></a>
+                <a href="https://wa.me/543815800956" target="_blank" ><img src="../images/whatsapp.png" alt="" class="logo"></a>
             </div>
             <div class="copy">
                 &copy; 2022 por lzr
